; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pem/extr_pem_all.c_pkey_get_rsa.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pem/extr_pem_all.c_pkey_get_rsa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32**)* @pkey_get_rsa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @pkey_get_rsa(i32* %0, i32** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32* null, i32** %3, align 8
  br label %29

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = call i32* @EVP_PKEY_get1_RSA(i32* %11)
  store i32* %12, i32** %6, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @EVP_PKEY_free(i32* %13)
  %15 = load i32*, i32** %6, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %10
  store i32* null, i32** %3, align 8
  br label %29

18:                                               ; preds = %10
  %19 = load i32**, i32*** %5, align 8
  %20 = icmp ne i32** %19, null
  br i1 %20, label %21, label %27

21:                                               ; preds = %18
  %22 = load i32**, i32*** %5, align 8
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @RSA_free(i32* %23)
  %25 = load i32*, i32** %6, align 8
  %26 = load i32**, i32*** %5, align 8
  store i32* %25, i32** %26, align 8
  br label %27

27:                                               ; preds = %21, %18
  %28 = load i32*, i32** %6, align 8
  store i32* %28, i32** %3, align 8
  br label %29

29:                                               ; preds = %27, %17, %9
  %30 = load i32*, i32** %3, align 8
  ret i32* %30
}

declare dso_local i32* @EVP_PKEY_get1_RSA(i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1

declare dso_local i32 @RSA_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
